--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-tag",
- "version": "1.1.0",
+ "version": "2.0.0",
  "description": "uxcore-tag component for uxcore.",
  "repository": "https://github.com/uxcore/uxcore-tag.git",
  "author": "peijie.dpj",
@@ -37,12 +37,13 @@
   "react": "0.14.x",
   "react-addons-test-utils": "0.14.x",
   "react-dom": "0.14.x",
-  "uxcore-kuma": "2.x",
+  "uxcore-kuma": "*",
   "uxcore-tools": "0.2.x"
  },
  "dependencies": {
   "classnames": "^2.1.2",
   "object-assign": "^4.0.0",
+  "uxcore-icon": "^0.1.7",
   "uxcore-popover": "~0.4.0"
  },
  "contributors": [],
